--- a/css/style.css
+++ b/css/style.css
@@ -18,7 +18,7 @@
   font-weight: 500;
   src: url("/fonts/Ronald/Ronald-Medium.woff2") format("woff2");
 }
-@font-face {
+/* @font-face {
   font-display: swap;
   font-family: Ronald;
   font-style: normal;
@@ -31,7 +31,7 @@
   font-style: normal;
   font-weight: 800;
   src: url("/fonts/Ronald/Ronald-ExtraBold.woff2") format("woff2");
-}
+} */
 
 /* Grid */
 .button-stack {
@@ -244,7 +244,7 @@ button {
   min-height: 3rem; /* 48px */
   padding: 0.75rem 1rem; /* 12px ; 16px */
   font-size: 1.125rem; /* 18px */
-  font-weight: 600;
+  font-weight: 500;
   text-decoration: none;
   white-space: normal;
   background-color: var(--button-background, transparent);
