--- a/css/style.css
+++ b/css/style.css
@@ -67,7 +67,7 @@
 
 .container,
 .column {
-  min-height: 100vh;
+  min-height: 100dvh;
 }
 
 .container {
@@ -94,7 +94,7 @@
   top: 50%;
   width: 1px;
   height: 100%;
-  min-height: 100vh;
+  min-height: 100dvh;
   transform: translateY(-50%);
 }
 
